--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info]}.
 
 {deps,[
-       {meck, ".*", {git, "git://github.com/groovenauts-erlang/meck.git", {tag, "0.8.2"}}}
+       {meck, ".*", {git, "git://github.com/groovenauts-erlang/meck.git", {tag, "0.8.2-gn"}}}
       ]}.
 
 {clean_files, ["*~","**/*~","**/*.beam","logs/*","test/Emakefile"]}.
